# serializer version: 1
# name: test_merge_response[calendar]
  Wrapper([
    dict({
      'description': '',
      'end': '2024-02-27T18:00:00-06:00',
      'entity_id': 'calendar.sports',
      'start': '2024-02-27T17:00:00-06:00',
      'summary': 'Basketball vs. Rockets',
      'value_key': 'events',
    }),
    dict({
      'description': '',
      'end': '2024-02-26T09:00:00-06:00',
      'entity_id': 'calendar.yap_house_schedules',
      'start': '2024-02-26T08:00:00-06:00',
      'summary': 'Dr. Appt',
      'value_key': 'events',
    }),
    dict({
      'description': 'something good',
      'end': '2024-02-28T21:00:00-06:00',
      'entity_id': 'calendar.yap_house_schedules',
      'start': '2024-02-28T20:00:00-06:00',
      'summary': 'Bake a cake',
      'value_key': 'events',
    }),
  ])
# ---
# name: test_merge_response[vacuum]
  Wrapper([
    dict({
      'entity_id': 'vacuum.deebot_n8_plus_1',
      'header': dict({
        'ver': '0.0.1',
      }),
      'payloadType': 'j',
      'resp': dict({
        'body': dict({
          'msg': 'ok',
        }),
      }),
    }),
    dict({
      'entity_id': 'vacuum.deebot_n8_plus_2',
      'header': dict({
        'ver': '0.0.1',
      }),
      'payloadType': 'j',
      'resp': dict({
        'body': dict({
          'msg': 'ok',
        }),
      }),
    }),
  ])
# ---
# name: test_merge_response[weather]
  Wrapper([
    dict({
      'cloud_coverage': 100,
      'condition': 'cloudy',
      'datetime': '2024-03-31T16:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 87,
      'precipitation': 0.2,
      'pressure': 998,
      'temperature': 10,
      'templow': 4,
      'value_key': 'forecast',
      'wind_bearing': 79,
      'wind_gust_speed': 21.6,
      'wind_speed': 11.88,
    }),
    dict({
      'cloud_coverage': 100,
      'condition': 'rainy',
      'datetime': '2024-04-01T12:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 88,
      'precipitation': 2.2,
      'pressure': 999,
      'temperature': 6,
      'templow': 1,
      'value_key': 'forecast',
      'wind_bearing': 17,
      'wind_gust_speed': 20.52,
      'wind_speed': 8.64,
    }),
    dict({
      'cloud_coverage': 100,
      'condition': 'cloudy',
      'datetime': '2024-04-02T12:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 71,
      'precipitation': 1.3,
      'pressure': 1003,
      'temperature': 0,
      'templow': -3,
      'value_key': 'forecast',
      'wind_bearing': 17,
      'wind_gust_speed': 57.24,
      'wind_speed': 30.6,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2024-03-31T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 71,
      'precipitation': 0,
      'precipitation_probability': 6.6,
      'temperature': 10.9,
      'templow': 6.5,
      'value_key': 'forecast',
      'wind_bearing': 71.8,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.7,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2024-04-01T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 79,
      'precipitation': 0,
      'precipitation_probability': 8,
      'temperature': 10.2,
      'templow': 3.4,
      'value_key': 'forecast',
      'wind_bearing': 350.6,
      'wind_gust_speed': 38.2,
      'wind_speed': 21.6,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2024-04-02T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 77,
      'precipitation': 2.3,
      'precipitation_probability': 67.4,
      'temperature': 3,
      'templow': 0,
      'value_key': 'forecast',
      'wind_bearing': 24.5,
      'wind_gust_speed': 64.8,
      'wind_speed': 37.4,
    }),
  ])
# ---
# name: test_merge_response[workday]
  Wrapper([
    dict({
      'entity_id': 'binary_sensor.workday',
      'workday': True,
    }),
    dict({
      'entity_id': 'binary_sensor.workday2',
      'workday': False,
    }),
  ])
# ---
# name: test_merge_response_with_empty_response[empty_response]
  Wrapper([
  ])
# ---
# name: test_merge_response_with_selected_key[vacuum]
  Wrapper([
    dict({
      'body': dict({
        'msg': 'ok',
      }),
      'entity_id': 'vacuum.deebot_n8_plus_1',
    }),
    dict({
      'body': dict({
        'msg': 'not_ok',
      }),
      'entity_id': 'vacuum.deebot_n8_plus_2',
    }),
  ])
# ---
# name: test_merge_response_with_sorting[weather]
  Wrapper([
    dict({
      'condition': 'cloudy',
      'datetime': '2024-03-31T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 71,
      'precipitation': 0,
      'precipitation_probability': 6.6,
      'temperature': 10.9,
      'templow': 6.5,
      'value_key': 'forecast',
      'wind_bearing': 71.8,
      'wind_gust_speed': 24.1,
      'wind_speed': 13.7,
    }),
    dict({
      'cloud_coverage': 100,
      'condition': 'cloudy',
      'datetime': '2024-03-31T16:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 87,
      'precipitation': 0.2,
      'pressure': 998,
      'temperature': 10,
      'templow': 4,
      'value_key': 'forecast',
      'wind_bearing': 79,
      'wind_gust_speed': 21.6,
      'wind_speed': 11.88,
    }),
    dict({
      'condition': 'cloudy',
      'datetime': '2024-04-01T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 79,
      'precipitation': 0,
      'precipitation_probability': 8,
      'temperature': 10.2,
      'templow': 3.4,
      'value_key': 'forecast',
      'wind_bearing': 350.6,
      'wind_gust_speed': 38.2,
      'wind_speed': 21.6,
    }),
    dict({
      'cloud_coverage': 100,
      'condition': 'rainy',
      'datetime': '2024-04-01T12:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 88,
      'precipitation': 2.2,
      'pressure': 999,
      'temperature': 6,
      'templow': 1,
      'value_key': 'forecast',
      'wind_bearing': 17,
      'wind_gust_speed': 20.52,
      'wind_speed': 8.64,
    }),
    dict({
      'condition': 'snowy',
      'datetime': '2024-04-02T10:00:00+00:00',
      'entity_id': 'weather.forecast_home',
      'humidity': 77,
      'precipitation': 2.3,
      'precipitation_probability': 67.4,
      'temperature': 3,
      'templow': 0,
      'value_key': 'forecast',
      'wind_bearing': 24.5,
      'wind_gust_speed': 64.8,
      'wind_speed': 37.4,
    }),
    dict({
      'cloud_coverage': 100,
      'condition': 'cloudy',
      'datetime': '2024-04-02T12:00:00',
      'entity_id': 'weather.smhi_home',
      'humidity': 71,
      'precipitation': 1.3,
      'pressure': 1003,
      'temperature': 0,
      'templow': -3,
      'value_key': 'forecast',
      'wind_bearing': 17,
      'wind_gust_speed': 57.24,
      'wind_speed': 30.6,
    }),
  ])
# ---
